--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,17 @@
 name: "my-website"
+output_dir: "."
 navbar:
-  title: "My Website"
+  title: "JSC370 Final Project"
   left:
     - text: "Home"
       href: index.html
-      
+  right:
+    - icon: fa-github fa-lg
+      href: https://github.com/JSC370/JSC370-2024/
+    - text: "JSC370 Home"
+      href: https://jsc370.github.io/JSC370-2024/
+output:
+  html_document:
+    theme: cosmo
+    css: styles.css
+    
